added date validation to all wrds functions

--- a/nbs/01_wrds/00_wrds_api.ipynb
+++ b/nbs/01_wrds/00_wrds_api.ipynb
@@ -39,15 +39,17 @@
    "source": [
     "#| hide\n",
     "#| export \n",
-    "from typing import Sequence\n",
+    "from typing import Sequence, List\n",
     "import getpass\n",
     "import os\n",
     "import sys\n",
+    "from sys import version_info\n",
     "import stat\n",
+    "from datetime import datetime\n",
+    "\n",
     "import pandas as pd\n",
     "import sqlalchemy as sa\n",
-    "import urllib.parse\n",
-    "from sys import version_info"
+    "import urllib.parse"
    ]
   },
   {
@@ -1230,6 +1232,22 @@
    "source": [
     "#| eval: false\n",
     "db.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def validate_dates(date_strings: List[str]) -> bool:\n",
+    "    for date in date_strings:\n",
+    "        if date is not None:\n",
+    "            try:\n",
+    "                datetime.strptime(date, '%m/%d/%Y')\n",
+    "            except ValueError:\n",
+    "                raise ValueError(f\"Date '{date}' is not in the correct format. Should be 'mm/dd/yyyy'\")"
    ]
   },
   {
