--- a/nbs/01_wrds/01_crspm.ipynb
+++ b/nbs/01_wrds/01_crspm.ipynb
@@ -334,6 +334,7 @@
     ") -> pd.DataFrame:\n",
     "    \"Downloads `vars` from `start_date` to `end_date` from WRDS {LIBRARY}.{TABLE}, {LIBRARY}.{NAMES_TABLE} and {LIBRARY}.{DELIST_TABLE}.\" \n",
     "\n",
+    "    wrds_api.validate_dates([start_date, end_date])\n",
     "    varlist_string = parse_varlist(vars, required_vars=required_vars)\n",
     "    sql_string = f\"\"\"SELECT {varlist_string}\n",
     "                        FROM {LIBRARY}.{TABLE} AS a \n",
