--- a/nbs/01_wrds/03_compa.ipynb
+++ b/nbs/01_wrds/03_compa.ipynb
@@ -270,6 +270,7 @@
     ") -> pd.DataFrame:\n",
     "    \"\"\"Downloads `vars` from `start_date` to `end_date` from WRDS `{LIBRARY}.{TABLE}` library \"\"\"\n",
     " \n",
+    "    wrds_api.validate_dates([start_date, end_date])\n",
     "    vars = parse_varlist(vars, required_vars=required_vars)\n",
     "\n",
     "    sql_string=f\"\"\"SELECT  {vars}  \n",
