--- a/nbs/01_wrds/03_compa_ccm.ipynb
+++ b/nbs/01_wrds/03_compa_ccm.ipynb
@@ -219,6 +219,7 @@
     ") -> pd.DataFrame:\n",
     "    \"\"\"Downloads `vars` from `start_date` to `end_date` from WRDS `{LIBRARY}.{TABLE}` library and adds PERMNO and PERMCO as in CCM\"\"\"\n",
     " \n",
+    "    wrds_api.validate_dates([start_date, end_date])\n",
     "    vars = parse_varlist(vars, required_vars=required_vars)\n",
     "\n",
     "    sql_string=f\"\"\"SELECT c.lpermno as permno, c.lpermco as permco, c.liid, c.linkprim as linkprim, {vars}\n",
