--- a/nbs/01_wrds/06_ibes_ltg.ipynb
+++ b/nbs/01_wrds/06_ibes_ltg.ipynb
@@ -220,13 +220,14 @@
     "#| export\n",
     "def get_raw_data(vars: List[str]=None, # If None, downloads `default_raw_vars`; `permno`, `ticker`, and `anndats` added by default\n",
     "            required_vars: List[str] = ['ticker', 'anndats'], #list of variables that will get downloaded, even if not in `vars`\n",
-    "             obs_limit: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
+    "             nrows: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
     "             start_date: str=None, # Start date in MM/DD/YYYY format\n",
     "             end_date: str=None, #End date in MM/DD/YYYY format; if None, defaults to current date\n",
     "             permno_match_score: tuple=(1,), #accuracy of permno-ibes link. 1-6. 1 is best. use >1 with caution.\n",
     "             ) -> pd.DataFrame:\n",
     "    \"\"\"Downloads `vars` from `start_date` to `end_date` from WRDS `ibes.detu_epsus` library and adds PERMNO from CRSP\"\"\"\n",
     "\n",
+    "    wrds_api.validate_dates([start_date, end_date])\n",
     "    vars = parse_varlist(vars, prefix='a.', required_vars=required_vars)\n",
     "\n",
     "    sql_string=f\"\"\"SELECT {vars}, b.permno\n",
@@ -239,11 +240,11 @@
     "    if permno_match_score is not None: sql_string += r\" AND score IN %(permno_match_score)s\"\n",
     "    if start_date is not None: sql_string += r\" AND anndats >= %(start_date)s\"\n",
     "    if end_date is not None: sql_string += r\" AND anndats <= %(end_date)s\"\n",
-    "    if obs_limit is not None: sql_string += r\" LIMIT %(obs_limit)s\"\n",
+    "    if nrows is not None: sql_string += r\" LIMIT %(nrows)s\"\n",
     "\n",
     "    return wrds_api.download(sql_string,\n",
     "                             params={'permno_match_score': permno_match_score,\n",
-    "                                 'start_date':start_date, 'end_date':end_date, 'obs_limit':obs_limit})"
+    "                                 'start_date':start_date, 'end_date':end_date, 'nrows':nrows})"
    ]
   },
   {
@@ -319,7 +320,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "ltg = get_raw_data(start_date='01/01/2019', end_date='01/01/2022', obs_limit=1)\n",
+    "ltg = get_raw_data(start_date='01/01/2019', end_date='01/01/2022', nrows=1)\n",
     "ltg.head()"
    ]
   },
