--- a/nbs/01_wrds/05_ratios.ipynb
+++ b/nbs/01_wrds/05_ratios.ipynb
@@ -174,6 +174,7 @@
     "             ) -> pd.DataFrame:\n",
     "    \"\"\"Downloads `vars` from `start_date` to `end_date` from WRDS `{LIBRARY}.{TABLE}` library\"\"\"\n",
     "\n",
+    "    wrds_api.validate_dates([start_date, end_date])\n",
     "    if vars is None or vars=='*': vars = '*'\n",
     "    else: vars = ','.join(['public_date','permno'] + [f'{x}' for x in vars if x not in ['public_date', 'permno']])\n",
     "\n",
