--- a/nbs/01_wrds/03_compa.ipynb
+++ b/nbs/01_wrds/03_compa.ipynb
@@ -53,7 +53,7 @@
     "ENTITY_ID_IN_RAW_DSET = 'gvkey'\n",
     "ENTITY_ID_IN_CLEAN_DSET = 'gvkey'\n",
     "TIME_VAR_IN_RAW_DSET = 'datadate'\n",
-    "TIME_VAR_IN_CLEAN_DSET = 'Adate'"
+    "TIME_VAR_IN_CLEAN_DSET = f'{FREQ}date'"
    ]
   },
   {
@@ -241,7 +241,7 @@
     {
      "data": {
       "text/plain": [
-       "'a.at,a.lt,b.sic'"
+       "'a.lt,a.at,b.sic'"
       ]
      },
      "execution_count": null,
@@ -321,8 +321,8 @@
        "      <th></th>\n",
        "      <th>gvkey</th>\n",
        "      <th>datadate</th>\n",
-       "      <th>at</th>\n",
        "      <th>indfmt</th>\n",
+       "      <th>at</th>\n",
        "      <th>sich</th>\n",
        "      <th>sic</th>\n",
        "    </tr>\n",
@@ -332,8 +332,8 @@
        "      <th>0</th>\n",
        "      <td>001000</td>\n",
        "      <td>1961-12-31</td>\n",
-       "      <td>None</td>\n",
        "      <td>INDL</td>\n",
+       "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>3089</td>\n",
        "    </tr>\n",
@@ -342,8 +342,8 @@
        "</div>"
       ],
       "text/plain": [
-       "    gvkey    datadate    at indfmt  sich   sic\n",
-       "0  001000  1961-12-31  None   INDL  None  3089"
+       "    gvkey    datadate indfmt    at  sich   sic\n",
+       "0  001000  1961-12-31   INDL  None  None  3089"
       ]
      },
      "execution_count": null,
@@ -498,8 +498,8 @@
        "      <th></th>\n",
        "      <th>gvkey</th>\n",
        "      <th>datadate</th>\n",
-       "      <th>at</th>\n",
        "      <th>lt</th>\n",
+       "      <th>at</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -509,7 +509,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [gvkey, datadate, at, lt]\n",
+       "Columns: [gvkey, datadate, lt, at]\n",
        "Index: []"
       ]
      },
@@ -561,25 +561,25 @@
        "      <th></th>\n",
        "      <th>gvkey</th>\n",
        "      <th>datadate</th>\n",
-       "      <th>che</th>\n",
-       "      <th>drlt</th>\n",
-       "      <th>exchg</th>\n",
-       "      <th>sstk</th>\n",
-       "      <th>ap</th>\n",
-       "      <th>revt</th>\n",
-       "      <th>prcc_f</th>\n",
+       "      <th>dpact</th>\n",
        "      <th>capx</th>\n",
-       "      <th>...</th>\n",
-       "      <th>pstk</th>\n",
-       "      <th>dvp</th>\n",
-       "      <th>ajex</th>\n",
-       "      <th>xpp</th>\n",
-       "      <th>ceq</th>\n",
-       "      <th>xrd</th>\n",
-       "      <th>cogs</th>\n",
-       "      <th>pifo</th>\n",
+       "      <th>dv</th>\n",
+       "      <th>ni</th>\n",
+       "      <th>txt</th>\n",
        "      <th>cusip</th>\n",
+       "      <th>act</th>\n",
+       "      <th>sppe</th>\n",
+       "      <th>...</th>\n",
        "      <th>invt</th>\n",
+       "      <th>txdi</th>\n",
+       "      <th>ceq</th>\n",
+       "      <th>drc</th>\n",
+       "      <th>prstkc</th>\n",
+       "      <th>lct</th>\n",
+       "      <th>dd1</th>\n",
+       "      <th>pstk</th>\n",
+       "      <th>naics</th>\n",
+       "      <th>sale</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -590,7 +590,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [gvkey, datadate, che, drlt, exchg, sstk, ap, revt, prcc_f, capx, lct, dlc, lt, sale, dltr, gdwl, ivst, ivao, ivncf, pstkrv, xint, ppegt, tstk, dltt, prstkc, cik, rdip, dvpsx_f, xad, wcap, dvc, xrent, xsga, ni, ppent, sic, dp, csho, txditc, fic, drc, sich, re, dpact, txdi, pstkl, dd1, txp, naics, act, fyear, at, mib, itcb, fincf, txdb, dltis, aqc, txt, tic, dv, naicsh, oibdp, seq, rect, emp, xacc, pi, sppe, oancf, txfo, ib, intan, fyr, pstk, dvp, ajex, xpp, ceq, xrd, cogs, pifo, cusip, invt]\n",
+       "Columns: [gvkey, datadate, dpact, capx, dv, ni, txt, cusip, act, sppe, pstkrv, ajex, ppent, txfo, xsga, cik, xacc, xrd, dvc, xad, dltis, xpp, txditc, csho, tstk, ap, seq, che, gdwl, revt, drlt, dlc, rdip, xint, xrent, itcb, ivst, tic, fyear, aqc, sstk, emp, re, pstkl, dvp, fic, rect, sic, intan, fyr, dltr, pifo, exchg, at, txp, ppegt, prcc_f, lt, txdb, pi, ib, sich, dltt, oancf, ivao, oibdp, dp, naicsh, fincf, dvpsx_f, mib, ivncf, wcap, cogs, invt, txdi, ceq, drc, prstkc, lct, dd1, pstk, naics, sale]\n",
        "Index: []\n",
        "\n",
        "[0 rows x 84 columns]"
@@ -664,25 +664,25 @@
        "      <th></th>\n",
        "      <th>datadate</th>\n",
        "      <th>dtdate</th>\n",
-       "      <th>che</th>\n",
-       "      <th>drlt</th>\n",
-       "      <th>exchg</th>\n",
-       "      <th>sstk</th>\n",
-       "      <th>ap</th>\n",
-       "      <th>revt</th>\n",
-       "      <th>prcc_f</th>\n",
+       "      <th>dpact</th>\n",
        "      <th>capx</th>\n",
-       "      <th>...</th>\n",
-       "      <th>pstk</th>\n",
-       "      <th>dvp</th>\n",
-       "      <th>ajex</th>\n",
-       "      <th>xpp</th>\n",
-       "      <th>ceq</th>\n",
-       "      <th>xrd</th>\n",
-       "      <th>cogs</th>\n",
-       "      <th>pifo</th>\n",
+       "      <th>dv</th>\n",
+       "      <th>ni</th>\n",
+       "      <th>txt</th>\n",
        "      <th>cusip</th>\n",
+       "      <th>act</th>\n",
+       "      <th>sppe</th>\n",
+       "      <th>...</th>\n",
        "      <th>invt</th>\n",
+       "      <th>txdi</th>\n",
+       "      <th>ceq</th>\n",
+       "      <th>drc</th>\n",
+       "      <th>prstkc</th>\n",
+       "      <th>lct</th>\n",
+       "      <th>dd1</th>\n",
+       "      <th>pstk</th>\n",
+       "      <th>naics</th>\n",
+       "      <th>sale</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>gvkey</th>\n",
@@ -718,7 +718,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [datadate, dtdate, che, drlt, exchg, sstk, ap, revt, prcc_f, capx, lct, dlc, lt, sale, dltr, gdwl, ivst, ivao, ivncf, pstkrv, xint, ppegt, tstk, dltt, prstkc, cik, rdip, dvpsx_f, xad, wcap, dvc, xrent, xsga, ni, ppent, sic, dp, csho, txditc, fic, drc, sich, re, dpact, txdi, pstkl, dd1, txp, naics, act, fyear, at, mib, itcb, fincf, txdb, dltis, aqc, txt, tic, dv, naicsh, oibdp, seq, rect, emp, xacc, pi, sppe, oancf, txfo, ib, intan, fyr, pstk, dvp, ajex, xpp, ceq, xrd, cogs, pifo, cusip, invt]\n",
+       "Columns: [datadate, dtdate, dpact, capx, dv, ni, txt, cusip, act, sppe, pstkrv, ajex, ppent, txfo, xsga, cik, xacc, xrd, dvc, xad, dltis, xpp, txditc, csho, tstk, ap, seq, che, gdwl, revt, drlt, dlc, rdip, xint, xrent, itcb, ivst, tic, fyear, aqc, sstk, emp, re, pstkl, dvp, fic, rect, sic, intan, fyr, dltr, pifo, exchg, at, txp, ppegt, prcc_f, lt, txdb, pi, ib, sich, dltt, oancf, ivao, oibdp, dp, naicsh, fincf, dvpsx_f, mib, ivncf, wcap, cogs, invt, txdi, ceq, drc, prstkc, lct, dd1, pstk, naics, sale]\n",
        "Index: []\n",
        "\n",
        "[0 rows x 84 columns]"
@@ -746,10 +746,14 @@
     "\n",
     "    out = pd.DataFrame(index=df.index)\n",
     "\n",
+    "    # industry \n",
     "    out['sic_full'] = np.where(df['sich'].isna(), df['sic'], df['sich'])\n",
     "    out['naics_full'] = np.where(df['naicsh'].isna(), df['naics'], df['sich'])\n",
     "\n",
+    "    # size \n",
+    "    out['stock_price'] = np.abs(df['prcc_f'])\n",
     "    out['lag_at'] = pdm.lag(df['at'])\n",
+    "    out['mktcap'] = out['stock_price'] * df['csho']\n",
     "\n",
     "    # book equity vars\n",
     "    out['pstk0'] = df['pstk'].fillna(0)\n",
@@ -760,7 +764,7 @@
     "    out['bookeq'] = out['shreq'] + df['txditc'].fillna(0) - out['pref_stock']\n",
     "    out['bookeq_w_itcb'] = out['bookeq'] + df['itcb'].fillna(0)\n",
     "\n",
-    "    out['tobinq'] = (df['at'] - out['bookeq'] + df['prcc_f'] * df['csho']) / df['at']\n",
+    "    out['tobinq'] = (df['at'] - out['bookeq'] + out['stock_price'] * df['csho']) / df['at']\n",
     "\n",
     "    # issuance vars\n",
     "    out['equityiss_tot'] = (pdm.rdiff(out['bookeq']) - pdm.rdiff(df['re'])) \n",
@@ -779,7 +783,7 @@
     "    out['roa'] = df['ib'] / df['at']\n",
     "\n",
     "    # cash flow vars\n",
-    "    out['cflow_is'] = (df['ib']+df['dp']) \n",
+    "    out['cflow_is'] = df['ib']+df['dp']\n",
     "    out['cflow_cfs'] = df['oancf'] \n",
     "    out['cflow_full'] = np.where(df.dtdate.dt.year<1987, out['cflow_is'], out['cflow_cfs'])\n",
     "    for v in ['cflow_is','cflow_cfs','cflow_full']:\n",
@@ -794,8 +798,8 @@
     "    out.loc[out.booklev>1, 'booklev'] = 1\n",
     "\n",
     "    # payout vars\n",
-    "    out['dividends_2la'] = df['dvc'].fillna(0) / out['lag_at']\n",
-    "    out['repurchases_2la'] = df['prstkc'].fillna(0) / out['lag_at']\n",
+    "    out['dividends_2la'] = (df['dvc'].fillna(0) + df['dvp'].fillna(0)) / out['lag_at']\n",
+    "    out['repurchases_2la'] = (df['prstkc'].fillna(0) - pdm.rdiff(df['pstkrv']).fillna(0)) / out['lag_at']\n",
     "\n",
     "    out = out.replace([np.inf, -np.inf], np.nan)\n",
     "    return out \n"
@@ -840,14 +844,14 @@
        "      <th></th>\n",
        "      <th>sic_full</th>\n",
        "      <th>naics_full</th>\n",
+       "      <th>stock_price</th>\n",
        "      <th>lag_at</th>\n",
+       "      <th>mktcap</th>\n",
        "      <th>pstk0</th>\n",
        "      <th>pref_stock</th>\n",
        "      <th>shreq</th>\n",
        "      <th>bookeq</th>\n",
        "      <th>bookeq_w_itcb</th>\n",
-       "      <th>tobinq</th>\n",
-       "      <th>equityiss_tot</th>\n",
        "      <th>...</th>\n",
        "      <th>cflow_is</th>\n",
        "      <th>cflow_cfs</th>\n",
@@ -889,15 +893,15 @@
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 32 columns</p>\n",
+       "<p>0 rows × 34 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [sic_full, naics_full, lag_at, pstk0, pref_stock, shreq, bookeq, bookeq_w_itcb, tobinq, equityiss_tot, equityiss_cfs, debtiss_tot, debtiss_cfs, debtiss_bs, equityiss_tot_2la, equityiss_cfs_2la, debtiss_tot_2la, debtiss_cfs_2la, debtiss_bs_2la, ppent_pch, capx_2la, roa, cflow_is, cflow_cfs, cflow_full, cflow_is_2la, cflow_cfs_2la, cflow_full_2la, cash_2a, booklev, dividends_2la, repurchases_2la]\n",
+       "Columns: [sic_full, naics_full, stock_price, lag_at, mktcap, pstk0, pref_stock, shreq, bookeq, bookeq_w_itcb, tobinq, equityiss_tot, equityiss_cfs, debtiss_tot, debtiss_cfs, debtiss_bs, equityiss_tot_2la, equityiss_cfs_2la, debtiss_tot_2la, debtiss_cfs_2la, debtiss_bs_2la, ppent_pch, capx_2la, roa, cflow_is, cflow_cfs, cflow_full, cflow_is_2la, cflow_cfs_2la, cflow_full_2la, cash_2a, booklev, dividends_2la, repurchases_2la]\n",
        "Index: []\n",
        "\n",
-       "[0 rows x 32 columns]"
+       "[0 rows x 34 columns]"
       ]
      },
      "execution_count": null,
