--- a/nbs/01_wrds/03_compa_ccm.ipynb
+++ b/nbs/01_wrds/03_compa_ccm.ipynb
@@ -56,7 +56,7 @@
     "ENTITY_ID_IN_RAW_DSET = 'permno'\n",
     "ENTITY_ID_IN_CLEAN_DSET = 'permno'\n",
     "TIME_VAR_IN_RAW_DSET = 'datadate'\n",
-    "TIME_VAR_IN_CLEAN_DSET = 'Adate'"
+    "TIME_VAR_IN_CLEAN_DSET = f'{FREQ}date'"
    ]
   },
   {
@@ -190,7 +190,7 @@
     {
      "data": {
       "text/plain": [
-       "'a.at,a.lt'"
+       "'a.lt,a.at'"
       ]
      },
      "execution_count": null,
@@ -394,8 +394,8 @@
        "      <th>linkprim</th>\n",
        "      <th>gvkey</th>\n",
        "      <th>datadate</th>\n",
-       "      <th>at</th>\n",
        "      <th>lt</th>\n",
+       "      <th>at</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -405,7 +405,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [permno, permco, liid, linkprim, gvkey, datadate, at, lt]\n",
+       "Columns: [permno, permco, liid, linkprim, gvkey, datadate, lt, at]\n",
        "Index: []"
       ]
      },
@@ -461,21 +461,21 @@
        "      <th>linkprim</th>\n",
        "      <th>gvkey</th>\n",
        "      <th>datadate</th>\n",
-       "      <th>txdb</th>\n",
-       "      <th>wcap</th>\n",
-       "      <th>tic</th>\n",
-       "      <th>revt</th>\n",
-       "      <th>...</th>\n",
-       "      <th>fincf</th>\n",
-       "      <th>ppegt</th>\n",
-       "      <th>emp</th>\n",
-       "      <th>txt</th>\n",
-       "      <th>gdwl</th>\n",
-       "      <th>re</th>\n",
-       "      <th>oibdp</th>\n",
-       "      <th>dpact</th>\n",
-       "      <th>dv</th>\n",
        "      <th>ivao</th>\n",
+       "      <th>naicsh</th>\n",
+       "      <th>capx</th>\n",
+       "      <th>csho</th>\n",
+       "      <th>...</th>\n",
+       "      <th>dvc</th>\n",
+       "      <th>aqc</th>\n",
+       "      <th>ivst</th>\n",
+       "      <th>naics</th>\n",
+       "      <th>dvpsx_f</th>\n",
+       "      <th>txdb</th>\n",
+       "      <th>dltr</th>\n",
+       "      <th>fincf</th>\n",
+       "      <th>pstkl</th>\n",
+       "      <th>cusip</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -486,7 +486,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [permno, permco, liid, linkprim, gvkey, datadate, txdb, wcap, tic, revt, csho, pifo, ivncf, sic, drlt, prcc_f, xrd, sich, dlc, itcb, seq, cogs, xad, dltr, sale, prstkc, xrent, fyr, fic, pstkl, lct, pstk, ap, act, che, sstk, txp, mib, xacc, dvc, dvpsx_f, txdi, drc, intan, ajex, lt, ib, pi, tstk, txditc, txfo, xsga, rect, fyear, ceq, naicsh, naics, capx, rdip, dltt, cusip, xint, dltis, ppent, oancf, exchg, dvp, xpp, cik, dp, aqc, ni, pstkrv, dd1, ivst, at, sppe, invt, fincf, ppegt, emp, txt, gdwl, re, oibdp, dpact, dv, ivao]\n",
+       "Columns: [permno, permco, liid, linkprim, gvkey, datadate, ivao, naicsh, capx, csho, dltt, xint, txdi, oancf, wcap, sstk, dltis, rect, xpp, oibdp, emp, tstk, intan, dlc, prstkc, at, pifo, drlt, fic, pstkrv, fyear, xrent, tic, dpact, xad, drc, fyr, xacc, revt, xrd, itcb, pstk, exchg, ppent, txfo, dvp, cogs, ib, ivncf, ni, act, invt, ajex, seq, dd1, ap, sich, prcc_f, rdip, ppegt, xsga, gdwl, mib, sppe, dv, txt, dp, lt, lct, sale, txditc, sic, che, ceq, cik, re, pi, txp, dvc, aqc, ivst, naics, dvpsx_f, txdb, dltr, fincf, pstkl, cusip]\n",
        "Index: []\n",
        "\n",
        "[0 rows x 88 columns]"
@@ -565,21 +565,21 @@
        "      <th>liid</th>\n",
        "      <th>linkprim</th>\n",
        "      <th>gvkey</th>\n",
-       "      <th>txdb</th>\n",
-       "      <th>wcap</th>\n",
-       "      <th>tic</th>\n",
-       "      <th>revt</th>\n",
-       "      <th>...</th>\n",
-       "      <th>fincf</th>\n",
-       "      <th>ppegt</th>\n",
-       "      <th>emp</th>\n",
-       "      <th>txt</th>\n",
-       "      <th>gdwl</th>\n",
-       "      <th>re</th>\n",
-       "      <th>oibdp</th>\n",
-       "      <th>dpact</th>\n",
-       "      <th>dv</th>\n",
        "      <th>ivao</th>\n",
+       "      <th>naicsh</th>\n",
+       "      <th>capx</th>\n",
+       "      <th>csho</th>\n",
+       "      <th>...</th>\n",
+       "      <th>dvc</th>\n",
+       "      <th>aqc</th>\n",
+       "      <th>ivst</th>\n",
+       "      <th>naics</th>\n",
+       "      <th>dvpsx_f</th>\n",
+       "      <th>txdb</th>\n",
+       "      <th>dltr</th>\n",
+       "      <th>fincf</th>\n",
+       "      <th>pstkl</th>\n",
+       "      <th>cusip</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>permno</th>\n",
@@ -615,7 +615,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [datadate, dtdate, permco, liid, linkprim, gvkey, txdb, wcap, tic, revt, csho, pifo, ivncf, sic, drlt, prcc_f, xrd, sich, dlc, itcb, seq, cogs, xad, dltr, sale, prstkc, xrent, fyr, fic, pstkl, lct, pstk, ap, act, che, sstk, txp, mib, xacc, dvc, dvpsx_f, txdi, drc, intan, ajex, lt, ib, pi, tstk, txditc, txfo, xsga, rect, fyear, ceq, naicsh, naics, capx, rdip, dltt, cusip, xint, dltis, ppent, oancf, exchg, dvp, xpp, cik, dp, aqc, ni, pstkrv, dd1, ivst, at, sppe, invt, fincf, ppegt, emp, txt, gdwl, re, oibdp, dpact, dv, ivao]\n",
+       "Columns: [datadate, dtdate, permco, liid, linkprim, gvkey, ivao, naicsh, capx, csho, dltt, xint, txdi, oancf, wcap, sstk, dltis, rect, xpp, oibdp, emp, tstk, intan, dlc, prstkc, at, pifo, drlt, fic, pstkrv, fyear, xrent, tic, dpact, xad, drc, fyr, xacc, revt, xrd, itcb, pstk, exchg, ppent, txfo, dvp, cogs, ib, ivncf, ni, act, invt, ajex, seq, dd1, ap, sich, prcc_f, rdip, ppegt, xsga, gdwl, mib, sppe, dv, txt, dp, lt, lct, sale, txditc, sic, che, ceq, cik, re, pi, txp, dvc, aqc, ivst, naics, dvpsx_f, txdb, dltr, fincf, pstkl, cusip]\n",
        "Index: []\n",
        "\n",
        "[0 rows x 88 columns]"
@@ -643,7 +643,14 @@
     "\n",
     "    out = pd.DataFrame(index=df.index)\n",
     "\n",
+    "    # industry \n",
+    "    out['sic_full'] = np.where(df['sich'].isna(), df['sic'], df['sich'])\n",
+    "    out['naics_full'] = np.where(df['naicsh'].isna(), df['naics'], df['sich'])\n",
+    "\n",
+    "    # size \n",
+    "    out['stock_price'] = np.abs(df['prcc_f'])\n",
     "    out['lag_at'] = pdm.lag(df['at'])\n",
+    "    out['mktcap'] = out['stock_price'] * df['csho']\n",
     "\n",
     "    # book equity vars\n",
     "    out['pstk0'] = df['pstk'].fillna(0)\n",
@@ -654,7 +661,7 @@
     "    out['bookeq'] = out['shreq'] + df['txditc'].fillna(0) - out['pref_stock']\n",
     "    out['bookeq_w_itcb'] = out['bookeq'] + df['itcb'].fillna(0)\n",
     "\n",
-    "    out['tobinq'] = (df['at'] - out['bookeq'] + df['prcc_f'] * df['csho']) / df['at']\n",
+    "    out['tobinq'] = (df['at'] - out['bookeq'] + out['mktcap']) / df['at']\n",
     "\n",
     "    # issuance vars\n",
     "    out['equityiss_tot'] = (pdm.rdiff(out['bookeq']) - pdm.rdiff(df['re'])) \n",
@@ -688,8 +695,8 @@
     "    out.loc[out.booklev>1, 'booklev'] = 1\n",
     "\n",
     "    # payout vars\n",
-    "    out['dividends_2la'] = df['dvc'].fillna(0) / out['lag_at']\n",
-    "    out['repurchases_2la'] = df['prstkc'].fillna(0) / out['lag_at']\n",
+    "    out['dividends_2la'] = (df['dvc'].fillna(0) + df['dvp'].fillna(0)) / out['lag_at']\n",
+    "    out['repurchases_2la'] = (df['prstkc'].fillna(0) - pdm.rdiff(df['pstkrv']).fillna(0)) / out['lag_at']\n",
     "\n",
     "    out = out.replace([np.inf, -np.inf], np.nan)\n",
     "    return out \n"
@@ -732,16 +739,16 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th>sic_full</th>\n",
+       "      <th>naics_full</th>\n",
+       "      <th>stock_price</th>\n",
        "      <th>lag_at</th>\n",
+       "      <th>mktcap</th>\n",
        "      <th>pstk0</th>\n",
        "      <th>pref_stock</th>\n",
        "      <th>shreq</th>\n",
        "      <th>bookeq</th>\n",
        "      <th>bookeq_w_itcb</th>\n",
-       "      <th>tobinq</th>\n",
-       "      <th>equityiss_tot</th>\n",
-       "      <th>equityiss_cfs</th>\n",
-       "      <th>debtiss_tot</th>\n",
        "      <th>...</th>\n",
        "      <th>cflow_is</th>\n",
        "      <th>cflow_cfs</th>\n",
@@ -783,15 +790,15 @@
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 30 columns</p>\n",
+       "<p>0 rows × 34 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [lag_at, pstk0, pref_stock, shreq, bookeq, bookeq_w_itcb, tobinq, equityiss_tot, equityiss_cfs, debtiss_tot, debtiss_cfs, debtiss_bs, equityiss_tot_2la, equityiss_cfs_2la, debtiss_tot_2la, debtiss_cfs_2la, debtiss_bs_2la, ppent_pch, capx_2la, roa, cflow_is, cflow_cfs, cflow_full, cflow_is_2la, cflow_cfs_2la, cflow_full_2la, cash_2a, booklev, dividends_2la, repurchases_2la]\n",
+       "Columns: [sic_full, naics_full, stock_price, lag_at, mktcap, pstk0, pref_stock, shreq, bookeq, bookeq_w_itcb, tobinq, equityiss_tot, equityiss_cfs, debtiss_tot, debtiss_cfs, debtiss_bs, equityiss_tot_2la, equityiss_cfs_2la, debtiss_tot_2la, debtiss_cfs_2la, debtiss_bs_2la, ppent_pch, capx_2la, roa, cflow_is, cflow_cfs, cflow_full, cflow_is_2la, cflow_cfs_2la, cflow_full_2la, cash_2a, booklev, dividends_2la, repurchases_2la]\n",
        "Index: []\n",
        "\n",
-       "[0 rows x 30 columns]"
+       "[0 rows x 34 columns]"
       ]
      },
      "execution_count": null,
