--- a/nbs/01_wrds/05_ratios.ipynb
+++ b/nbs/01_wrds/05_ratios.ipynb
@@ -107,7 +107,7 @@
     "ENTITY_ID_IN_RAW_DSET = 'permno'\n",
     "ENTITY_ID_IN_CLEAN_DSET = 'permno'\n",
     "TIME_VAR_IN_RAW_DSET = 'public_date'\n",
-    "TIME_VAR_IN_CLEAN_DSET = 'Mdate'"
+    "TIME_VAR_IN_CLEAN_DSET = f'{FREQ}date'"
    ]
   },
   {
