--- a/nbs/01_wrds/06_ibes_ltg.ipynb
+++ b/nbs/01_wrds/06_ibes_ltg.ipynb
@@ -98,7 +98,7 @@
     "ENTITY_ID_IN_RAW_DSET = 'permno'\n",
     "ENTITY_ID_IN_CLEAN_DSET = 'permno'\n",
     "TIME_VAR_IN_RAW_DSET = 'date'\n",
-    "TIME_VAR_IN_CLEAN_DSET = 'Mdate'"
+    "TIME_VAR_IN_CLEAN_DSET = f'{FREQ}date'"
    ]
   },
   {
