--- a/nbs/02_papers/hassan_etal_2019.ipynb
+++ b/nbs/02_papers/hassan_etal_2019.ipynb
@@ -74,7 +74,7 @@
     "ENTITY_ID_IN_RAW_DSET = 'gvkey'\n",
     "ENTITY_ID_IN_CLEAN_DSET = 'permno'\n",
     "TIME_VAR_IN_RAW_DSET = 'date'\n",
-    "TIME_VAR_IN_CLEAN_DSET = 'Qdate'"
+    "TIME_VAR_IN_CLEAN_DSET = f'{FREQ}date'"
    ]
   },
   {
