reduced df outputs in notebooks to one row

--- a/nbs/01_wrds/04_compq.ipynb
+++ b/nbs/01_wrds/04_compq.ipynb
@@ -983,7 +983,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">001004</th>\n",
+       "      <th>001004</th>\n",
        "      <th>2021Q1</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -996,7 +996,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>40.000</td>\n",
+       "      <td>40.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1007,311 +1007,29 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021Q2</th>\n",
-       "      <td>2.7</td>\n",
-       "      <td>22.6</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.8</td>\n",
-       "      <td>-8.7</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>23.900</td>\n",
-       "      <td>22.6</td>\n",
-       "      <td>22.6</td>\n",
-       "      <td>0.014548</td>\n",
-       "      <td>0.013757</td>\n",
-       "      <td>0.013757</td>\n",
-       "      <td>0.039099</td>\n",
-       "      <td>0.133208</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.000487</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021Q3</th>\n",
-       "      <td>2.2</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>20.100</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>0.013054</td>\n",
-       "      <td>0.001883</td>\n",
-       "      <td>0.001883</td>\n",
-       "      <td>0.034251</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000325</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021Q4</th>\n",
-       "      <td>3.8</td>\n",
-       "      <td>16.3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>24.7</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>29.700</td>\n",
-       "      <td>16.3</td>\n",
-       "      <td>16.3</td>\n",
-       "      <td>0.019340</td>\n",
-       "      <td>0.010614</td>\n",
-       "      <td>0.010614</td>\n",
-       "      <td>0.030335</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.000065</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022Q1</th>\n",
-       "      <td>4.2</td>\n",
-       "      <td>15.9</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>19.8</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>30.300</td>\n",
-       "      <td>15.9</td>\n",
-       "      <td>15.9</td>\n",
-       "      <td>0.019809</td>\n",
-       "      <td>0.010395</td>\n",
-       "      <td>0.010395</td>\n",
-       "      <td>0.027706</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.012945</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">353945</th>\n",
-       "      <th>2021Q4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>162.019</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.106668</td>\n",
-       "      <td>0.179542</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022Q1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022Q2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022Q3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022Q4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>145.546</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.192916</td>\n",
-       "      <td>0.357492</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>95932 rows × 43 columns</p>\n",
+       "<p>1 rows × 43 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "               capxy_q  oancfy_q  sstky_q  prstkcy_q  dltisy_q  dltry_q  \\\n",
        "gvkey  Qdate                                                              \n",
        "001004 2021Q1      NaN       NaN      NaN        NaN       NaN      NaN   \n",
-       "       2021Q2      2.7      22.6      NaN       -0.8      -8.7      0.0   \n",
-       "       2021Q3      2.2       2.9      NaN        0.5       0.0      0.0   \n",
-       "       2021Q4      3.8      16.3      NaN       -0.1       0.0     24.7   \n",
-       "       2022Q1      4.2      15.9      NaN       19.8       0.0      0.0   \n",
-       "...                ...       ...      ...        ...       ...      ...   \n",
-       "353945 2021Q4      NaN       NaN      NaN        NaN       NaN      NaN   \n",
-       "       2022Q1      NaN       NaN      NaN        NaN       NaN      NaN   \n",
-       "       2022Q2      NaN       NaN      NaN        NaN       NaN      NaN   \n",
-       "       2022Q3      NaN       NaN      NaN        NaN       NaN      NaN   \n",
-       "       2022Q4      NaN       NaN      NaN        NaN       NaN      NaN   \n",
        "\n",
        "               dvy_q  sppey_q  aqcy_q  fopty_q  ...  cflow_is cflow_cfs  \\\n",
        "gvkey  Qdate                                    ...                       \n",
-       "001004 2021Q1    NaN      NaN     NaN      NaN  ...    40.000       NaN   \n",
-       "       2021Q2    0.0      0.0     0.0      NaN  ...    23.900      22.6   \n",
-       "       2021Q3    0.0      0.0     0.0      NaN  ...    20.100       2.9   \n",
-       "       2021Q4    0.0      NaN     0.0      NaN  ...    29.700      16.3   \n",
-       "       2022Q1    0.0      NaN     0.0      NaN  ...    30.300      15.9   \n",
-       "...              ...      ...     ...      ...  ...       ...       ...   \n",
-       "353945 2021Q4    NaN      NaN     NaN      NaN  ...   162.019       NaN   \n",
-       "       2022Q1    NaN      NaN     NaN      NaN  ...       NaN       NaN   \n",
-       "       2022Q2    NaN      NaN     NaN      NaN  ...       NaN       NaN   \n",
-       "       2022Q3    NaN      NaN     NaN      NaN  ...       NaN       NaN   \n",
-       "       2022Q4    NaN      NaN     NaN      NaN  ...   145.546       NaN   \n",
+       "001004 2021Q1    NaN      NaN     NaN      NaN  ...      40.0       NaN   \n",
        "\n",
        "              cflow_full  cflow_is_2la  cflow_cfs_2la  cflow_full_2la  \\\n",
        "gvkey  Qdate                                                            \n",
        "001004 2021Q1        NaN           NaN            NaN             NaN   \n",
-       "       2021Q2       22.6      0.014548       0.013757        0.013757   \n",
-       "       2021Q3        2.9      0.013054       0.001883        0.001883   \n",
-       "       2021Q4       16.3      0.019340       0.010614        0.010614   \n",
-       "       2022Q1       15.9      0.019809       0.010395        0.010395   \n",
-       "...                  ...           ...            ...             ...   \n",
-       "353945 2021Q4        NaN           NaN            NaN             NaN   \n",
-       "       2022Q1        NaN           NaN            NaN             NaN   \n",
-       "       2022Q2        NaN           NaN            NaN             NaN   \n",
-       "       2022Q3        NaN           NaN            NaN             NaN   \n",
-       "       2022Q4        NaN           NaN            NaN             NaN   \n",
        "\n",
-       "                cash_2a   booklev  dividends_2la  repurchases_2la  \n",
-       "gvkey  Qdate                                                       \n",
-       "001004 2021Q1  0.068542       NaN            NaN              NaN  \n",
-       "       2021Q2  0.039099  0.133208            0.0        -0.000487  \n",
-       "       2021Q3  0.034251       NaN            0.0         0.000325  \n",
-       "       2021Q4  0.030335       NaN            0.0        -0.000065  \n",
-       "       2022Q1  0.027706       NaN            0.0         0.012945  \n",
-       "...                 ...       ...            ...              ...  \n",
-       "353945 2021Q4  0.106668  0.179542            NaN              NaN  \n",
-       "       2022Q1       NaN       NaN            0.0         0.000000  \n",
-       "       2022Q2       NaN       NaN            NaN              NaN  \n",
-       "       2022Q3       NaN       NaN            NaN              NaN  \n",
-       "       2022Q4  0.192916  0.357492            NaN              NaN  \n",
+       "                cash_2a  booklev  dividends_2la  repurchases_2la  \n",
+       "gvkey  Qdate                                                      \n",
+       "001004 2021Q1  0.068542      NaN            NaN              NaN  \n",
        "\n",
-       "[95932 rows x 43 columns]"
+       "[1 rows x 43 columns]"
       ]
      },
      "execution_count": null,
@@ -1321,7 +1039,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "ftrs"
+    "ftrs.head(1)"
    ]
   },
   {
