--- a/nbs/01_wrds/04_compq.ipynb
+++ b/nbs/01_wrds/04_compq.ipynb
@@ -893,7 +893,7 @@
     "    out['repurchases_2la'] = (out['prstkcy_q'].fillna(0) - pdm.rdiff(df['pstkrq']).fillna(0)) / out['lag_atq']\n",
     "    \n",
     "    out = out.replace([np.inf, -np.inf], np.nan)\n",
-    "    return out \n"
+    "    return out "
    ]
   },
   {
